infrastructure/cloudflare-gateway/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-gateway
  namespace: cloudflare-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare-gateway
  template:
    metadata:
      labels:
        app: cloudflare-gateway
    spec:
      serviceAccountName: cloudflare-gateway
      containers:
        - name: cloudflare-gateway
          image: ghcr.io/pl4nty/cloudflare-kubernetes-gateway:latest
          args:
            - --ingress-class=cloudflare-tunnel
